<resources>
    <string name="app_name" translatable="false">Travriends</string>
    <string name="title_activity_maps" translatable="false">@string/app_name</string>
    <string name="splashDesc">"Your friendly traveling companion"</string>
    <string name="description">Deskripsi Lokasi</string>
    <string name="nama">Nama: </string>
    <string name="address">Address: </string>
    <string name="types">"Type: "</string>
    <string name="rating">"Rating: "</string>
    <string name="qibla">Qibla Direction</string>
    <string name="notSupported">Not Supported</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="temp">"Temp: "</string>
    <string name="humidity">"Humid: "</string>
    <string name="poiInfo">Click Me Again For More Detail!</string>
    <string name="direcInfo">Click Me Again To Get Direction Here!</string>
    <string name="Err_Message">Location Not Found!</string>
    <string name="destination">Your Destination</string>

</resources>