<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sheets2"
    android:layout_width="match_parent"
    android:background="@drawable/btm_sheet_bg"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_keyboard_arrow_up_24"
            android:layout_gravity="center"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/btmSheetX"
            android:layout_marginRight="@dimen/btmSheetX">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginVertical="20dp">

                <TextView
                    android:id="@+id/textDeskripsi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textColor="@color/black"
                    android:textStyle="bold" />
            </LinearLayout>
            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbarThumbVertical="@null"
                android:scrollbarThumbHorizontal="@null"
                android:paddingBottom="@dimen/btmSheetX">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/nama"
                            android:textColor="@color/black"
                            android:textStyle="bold" />
                        <TextView
                            android:id="@+id/namaLokasi"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Sample"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/address"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:layout_marginTop="@dimen/elemenY"
                            android:layout_weight="2"
                            />
                        <TextView
                            android:id="@+id/txtAddress"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Sample"
                            android:layout_weight="1"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/types"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:layout_marginTop="@dimen/elemenY"
                            android:layout_weight="2"
                            />
                        <TextView
                            android:id="@+id/txtTypes"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Sample"
                            android:layout_weight="1"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/rating"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:layout_marginTop="@dimen/elemenY"
                            android:layout_weight="2"
                            />
                        <TextView
                            android:id="@+id/txtRating"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Sample"
                            android:layout_weight="1"
                            />
                    </LinearLayout>
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>